fixed post card border not showing bug

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,5 +1,6 @@
 .post {
   margin-bottom: 1rem;
+  border: 1px solid #e1e1e1;
 }
 
 .postImg {
